--- a/读经打卡/pages/tabBar/index/index.wxml
+++ b/读经打卡/pages/tabBar/index/index.wxml
@@ -16,13 +16,13 @@
       <text class="ft-32">今日读经进度</text>
     </view>
     <view class="flex flex-direction-row flex-jsb mg-tp40">
-      <view class="border-9F9F9F color-666 w300 h80 flex flex-hc flex-vc ft-32"><text>开始章节</text></view>
+      <view class="border-9F9F9F color-666 w300 h80 flex flex-hc flex-vc ft-32" bindtap="start"><text>开始章节</text></view>
       <view class="h80 flex flex-vc"><image src="../../../static/images/index/fromTo.png" class="w50 h50"></image></view>
-      <view class="border-9F9F9F color-666 w300 h80 flex flex-hc flex-vc ft-32"><text>结束章节</text></view>
+      <view class="border-9F9F9F color-666 w300 h80 flex flex-hc flex-vc ft-32" bindtap="end"><text>结束章节</text></view>
     </view>
 
     <view class="mg-tp40">
-      <button wx:if="{{!alreadyPunched}}" class="width-full h80 line-h80 bg-1ccfcf bd-rd8 ft-36">今日打卡</button>
+      <button bindtap="punch" wx:if="{{!alreadyPunched}}" class="width-full h80 line-h80 bg-1ccfcf bd-rd8 ft-36">今日打卡</button>
       <button wx:else class="width-full h80 line-h80 bg-1ccfcf bd-rd8">修改打卡记录</button>
     </view>
 
