--- a/读经打卡/pages/tabBar/index/index.wxml
+++ b/读经打卡/pages/tabBar/index/index.wxml
@@ -22,7 +22,7 @@
     </view>
 
     <view class="mg-tp40">
-      <button bindtap="punch" wx:if="{{!alreadyPunched}}" class="width-full h80 line-h80 bg-1ccfcf bd-rd8 ft-36">今日打卡</button>
+      <button bindgetuserinfo="punch" open-type='getUserInfo' wx:if="{{!alreadyPunched}}" class="width-full h80 line-h80 bg-1ccfcf bd-rd8 ft-36">今日打卡</button>
       <button wx:else class="width-full h80 line-h80 bg-1ccfcf bd-rd8">修改打卡记录</button>
     </view>
 
